--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,21 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Proof of concept - Login</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <div *ngIf="!auth.token">
+    inicia Sension - Parav Probar el Cloud
+  </div>
+  <div *ngIf="!!auth.token">
+    
+    <input type="file" multiple="true" (change)="fileChanges($event)">
+    <button ion-button (tab)="submit()" secondary>Subir Archivo</button>
+  
+  </div>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <!--<button ion-button secondary menuToggle>Toggle Menu</button>-->
 </ion-content>
