--- a/src/pages/sig-up/sig-up.html
+++ b/src/pages/sig-up/sig-up.html
@@ -32,7 +32,7 @@
       &nbsp; Ingresar con Google
     </button>
     <button ion-button (click)="createuser('facebook')">
-      <ion-icon name="logo-Facebook"></ion-icon>
+      <ion-icon name="logo-facebook"></ion-icon>
       &nbsp; Ingresar con Facebook
     </button>
   </div>
